package NDoom;

message TModuloDocChunkMappingInfo {
    required uint32 Modulo = 1;
    required uint32 Size = 2;
};
